@@ -5,7 +5,7 @@ use warnings;
 
 use lib '../..';
 
-our $VERSION = "1.02";
+our $VERSION = "1.03";
 
 use base qw(App::Followme::EveryFile);
 
